# FinancesControl

./: .gitignore  README.md  main.py  pyproject.toml
bot/: bot.py  main.py  middlewares.py
database/: models.py  tests.py
financescontrol/bot/: bot.py  main.py  middlewares.py
src/bot/: bot.py  middlewares.py
src/bot/bot_dialogs/: main.py  session.py  states.py  wallets.py
src/database/: models.py
tests/: conftest.py  database.py  main.py  test_db.py
