[tool.poetry]
name = "financescontrol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "FinancesControl"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
aiogram-dialog = "^2.1.0"
sqlalchemy = "^2.0.32"
python-dotenv = "^0.21.0"
aiosqlite = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"