[tool.poetry]
name = "financescontrol"
version = "0.1.0"
description = ""
authors = ["S080808 <0107suren@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.32"
aiogram = "^3.10.0"
aiogram-dialog = "^2.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
