[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["S080808 <0107suren@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
aiogram = "^3.12.0"
aiogram-dialog = "^2.1.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
